--- a/package.json
+++ b/package.json
@@ -2,27 +2,29 @@
   "name": "panorama-photo-viewer",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "初始化": "npm i",
+    "打包": "npx webpack",
+    "运行": "node dist/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/miswanting/panorama-photo-viewer.git"
   },
   "author": "Miswanting",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/miswanting/panorama-photo-viewer/issues"
   },
   "homepage": "https://github.com/miswanting/panorama-photo-viewer#readme",
   "devDependencies": {
-    "@types/node": "^12.0.10",
-    "three": "^0.105.2",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5"
+    "@types/node": "latest",
+    "copy-webpack-plugin": "latest",
+    "three": "latest",
+    "ts-loader": "latest",
+    "typescript": "latest",
+    "webpack": "latest",
+    "webpack-cli": "latest"
   }
 }
