--- a/F - 副本/tsconfig.json
+++ b/F - 副本/tsconfig.json
@@ -2,10 +2,12 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "module": "commonjs",
-        "target": "es5",
-        "jsx": "react"
+        "target": "ESNext",
+        "jsx": "react",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "./src/**/*"
