--- a/F - 副本/package.json
+++ b/F - 副本/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "f",
+  "name": "front",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "初始化": "npm i",
+    "打包": "npx webpack",
+    "运行": "node dist/server.js"
+  },
   "devDependencies": {
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "copy-webpack-plugin": "latest",
+    "css-loader": "latest",
+    "file-loader": "latest",
+    "normalize.css": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "sass": "latest",
     "sass-loader": "latest",
+    "socket.io-client": "latest",
     "source-map-loader": "latest",
+    "style-loader": "latest",
+    "three": "latest",
     "ts-loader": "latest",
     "typescript": "latest",
     "url-loader": "latest",
